--- a/app/index.html
+++ b/app/index.html
@@ -9,22 +9,22 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-<section class="about">
-    <div class="container">
+<section class="about" id="about">
+    <div class="container container--100vh">
         <header class="header">
             <nav class="nav">
                 <ul class="nav__list list">
                     <li class="list__item">
-                        <a href="" class="list__link">About</a>
+                        <a href="#about" class="list__link">About</a>
                     </li>
                     <li class="list__item">
-                        <a href="" class="list__link">Skills</a>
+                        <a href="#skills" class="list__link">Skills</a>
                     </li>
                     <li class="list__item">
-                        <a href="" class="list__link">Projects</a>
+                        <a href="#portfolio" class="list__link">Projects</a>
                     </li>
                     <li class="list__item">
-                        <a href="" class="list__link">Contacts</a>
+                        <a href="#contacts" class="list__link">Contacts</a>
                     </li>
                 </ul>
             </nav>
@@ -46,27 +46,28 @@
 
     </div>
 </section>
-<section class="skills">
+<section class="skills" id="skills">
     <div class="container">
+        <h2 class="skills__title">Skills</h2>
         <ul class="skills__list">
-            <li class="skills__item">item</li>
-            <li class="skills__item">item</li>
-            <li class="skills__item">item</li>
-            <li class="skills__item">item</li>
-            <li class="skills__item">item</li>
-            <li class="skills__item">item</li>
-            <li class="skills__item">item</li>
-            <li class="skills__item">item</li>
-            <li class="skills__item">item</li>
-            <li class="skills__item">item</li>
+            <li class="skills__item html5">HTML5</li>
+            <li class="skills__item css3">CSS3</li>
+            <li class="skills__item pug">Pug</li>
+            <li class="skills__item gupl">Gulp</li>
+            <li class="skills__item sass">Sass</li>
+            <li class="skills__item photoshop">Adobe Photoshop</li>
+            <li class="skills__item rwd">Responsive Web Design</li>
+            <li class="skills__item js">Java Script</li>
+            <li class="skills__item jquery">jQuery</li>
+            <li class="skills__item git">Git</li>
         </ul>
     </div>
 </section>
-<section class="portfolio">
+<section class="portfolio" id="portfolio">
     <div class="container">
     </div>
 </section>
-<section class="contacts">
+<section class="contacts" id="contacts">
     <div class="container">
         <div class="social">
             <div class="social__item social__item--facebook">
@@ -85,6 +86,7 @@
     </div>
 </section>
 
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="js/common.js"></script>
 </body>
 </html>
